--- a/U6/universidad/src/main/resources/locale/messages_en.properties
+++ b/U6/universidad/src/main/resources/locale/messages_en.properties
@@ -3,6 +3,7 @@ menu.home = Home
 menu.services = Services
 menu.products = Products
 menu.departments = Departments
+menu.alumns = Alumns
 menu.register = Register
 menu.subject = Subjects
 menu.about = About
