--- a/U6/universidad/src/main/resources/locale/messages_es.properties
+++ b/U6/universidad/src/main/resources/locale/messages_es.properties
@@ -2,6 +2,7 @@ menu.home = Inicio
 menu.services = Servicios
 menu.products = Productos
 menu.departments = Departamentos
+menu.alumns = Alumnos
 menu.register = Registrarse
 menu.subject = Asignaturas
 menu.about = Sobre nosotros
