--- a/U6/SPRING_COMPLETO/src/main/resources/locale/messages_en.properties
+++ b/U6/SPRING_COMPLETO/src/main/resources/locale/messages_en.properties
@@ -8,3 +8,7 @@ menu.subject = Subjects
 menu.about = About
 menu.login = Login
 menu.students = Students
+menu.profesor = Profesors
+menu.addprof = Add Profesor
+menu.grados = Grads
+menu.addgrados = Add Grads
