--- a/U6/SPRING_COMPLETO/src/main/resources/locale/messages_es.properties
+++ b/U6/SPRING_COMPLETO/src/main/resources/locale/messages_es.properties
@@ -8,3 +8,7 @@ menu.subject = Asignaturas
 menu.about = Sobre nosotros
 menu.login = Entrar
 menu.students = Alumnos
+menu.profesor = Profesores
+menu.addprof = Añadir Profesor
+menu.grados = Grados
+menu.addgrados = Añadir Grados
