--- a/U6/SPRING_COMPLETO/src/main/resources/locale/messages_en.properties
+++ b/U6/SPRING_COMPLETO/src/main/resources/locale/messages_en.properties
@@ -12,3 +12,5 @@ menu.profesor = Profesors
 menu.addprof = Add Profesor
 menu.grados = Grads
 menu.addgrados = Add Grads
+menu.addprofesor = Add Profesor
+menu.addgrado = Add Grad
