--- a/U6/SPRING_COMPLETO/src/main/resources/locale/messages_es.properties
+++ b/U6/SPRING_COMPLETO/src/main/resources/locale/messages_es.properties
@@ -12,3 +12,5 @@ menu.profesor = Profesores
 menu.addprof = Añadir Profesor
 menu.grados = Grados
 menu.addgrados = Añadir Grados
+menu.addprofesor = Añadir Profesor
+menu.addgrado = Añadir Grado
