--- a/U6/SPRING_COMPLETO/src/main/resources/locale/messages_en.properties
+++ b/U6/SPRING_COMPLETO/src/main/resources/locale/messages_en.properties
@@ -2,7 +2,7 @@ menu.home = Home
 menu.services = Services
 menu.products = Products
 menu.departments = Departments
-menu.adddpto = Add department
+menu.adddpto = Add Department
 menu.register = Register
 menu.subject = Subjects
 menu.about = About
@@ -14,3 +14,46 @@ menu.grados = Grads
 menu.addgrados = Add Grads
 menu.addprofesor = Add Profesor
 menu.addgrado = Add Grad
+menu.addSubject = Add Subject
+menu.subjects = Subjects
+menu.editSubject = Update Subject
+menu.addAlumn = Add Alumn
+
+name = Name
+firstName = First Name
+secondName = Second Name
+direction = Direction
+phoneNumber = Phone Number
+dateBirthady = Date of Birthady
+city = City
+sex = Sex
+department = Department
+credits = Credits
+grade = Grade
+score = Score
+type= Type
+course = Course
+profesor = Profesor
+quarter = Quarter
+matricula = Matriculation of 
+
+add = ADD
+update = UPDATE 
+
+list.profesor = List of Profesors
+list.alumn = List of Alumns
+
+addProfesor = Add Profesor
+
+
+errorProfesor = Existing Profesor
+errorDepartment = Existing Department
+errorAlumn = Existing Alumn
+errorGrado = Existing Grad
+errorSubject = Existing Subject
+
+
+
+
+
+
