--- a/U6/SPRING_COMPLETO/src/main/resources/locale/messages_es.properties
+++ b/U6/SPRING_COMPLETO/src/main/resources/locale/messages_es.properties
@@ -2,7 +2,7 @@ menu.home = Inicio
 menu.services = Servicios
 menu.products = Productos
 menu.departments = Departamentos
-menu.adddpto = Añadir departamento
+menu.adddpto = Añadir Departamento
 menu.register = Registrarse
 menu.subject = Asignaturas
 menu.about = Sobre nosotros
@@ -14,3 +14,46 @@ menu.grados = Grados
 menu.addgrados = Añadir Grados
 menu.addprofesor = Añadir Profesor
 menu.addgrado = Añadir Grado
+menu.addSubject = Añadir Asignatura
+menu.subjects = Asignaturas
+menu.editSubject = Actualizar Asignatura
+menu.addAlumn = Añadir ALumno
+
+name = Nombre
+firstName = Primer Apellido
+secondName = Segundo Apellido
+direction = Direccion
+phoneNumber = Telefono
+dateBirthady = Fecha de Nacimiento
+city = Ciudad
+sex = Sexo
+department = Departamento
+credits = Creditos
+grade = Grado
+score = Nota
+type= Tipo
+course = Curso
+quarter = Cuatrimestre
+profesor = Profesor
+matricula = Matricula de 
+
+add = AÑADIR
+update = ACTUALIZAR
+
+list.profesor = Lista de Profesores
+list.alumn = Lista de Alumnos
+
+addProfesor = Añadir Profesor
+
+
+errorProfesor = Profesor Existente
+errorDepartment = Departmento Existente
+errorAlumn = Alumno Existente
+errorGrado = Grado Existente
+errorSubject = Asignatura Existente
+
+
+
+
+
+
