--- a/U6/SPRING_COMPLETO/src/main/resources/locale/messages_en.properties
+++ b/U6/SPRING_COMPLETO/src/main/resources/locale/messages_en.properties
@@ -3,21 +3,25 @@ menu.services = Services
 menu.products = Products
 menu.departments = Departments
 menu.adddpto = Add Department
+menu.updateDepartment = Update Department
 menu.register = Register
 menu.subject = Subjects
 menu.about = About
 menu.login = Login
 menu.students = Students
-menu.profesor = Profesors
-menu.addprof = Add Profesor
+menu.updateAlumn = Update Student
+menu.addAlumn = Add Student
+menu.profesor = Teachers
+menu.addprof = Add Teacher
+menu.updateprof = Update Teacher
 menu.grados = Grads
-menu.addgrados = Add Grads
-menu.addprofesor = Add Profesor
-menu.addgrado = Add Grad
+menu.addgrados = Add Grad
 menu.addSubject = Add Subject
 menu.subjects = Subjects
-menu.editSubject = Update Subject
-menu.addAlumn = Add Alumn
+menu.updateSubject = Update Subject
+menu.updateGrado = Update Grade
+menu.asigAlumn = Subjects of the Student
+menu.alumnAsig = Students of the Alumn
 
 name = Name
 firstName = First Name
@@ -33,20 +37,22 @@ grade = Grade
 score = Score
 type= Type
 course = Course
-profesor = Profesor
+profesor = Teacher
 quarter = Quarter
-matricula = Matriculation of 
+matricula = Matriculation of
+alumnOf = Students of
+asigOf = Subjects of
+profOf = Teachers of
+noDepartment = Not Asigned Department
 
 add = ADD
 update = UPDATE 
 
-list.profesor = List of Profesors
-list.alumn = List of Alumns
-
-addProfesor = Add Profesor
+list.profesor = List of Teachers
+list.alumn = List of Students
 
 
-errorProfesor = Existing Profesor
+errorProfesor = Existing Teacher
 errorDepartment = Existing Department
 errorAlumn = Existing Alumn
 errorGrado = Existing Grad
