--- a/U6/SPRING_COMPLETO/src/main/resources/locale/messages_es.properties
+++ b/U6/SPRING_COMPLETO/src/main/resources/locale/messages_es.properties
@@ -3,21 +3,28 @@ menu.services = Servicios
 menu.products = Productos
 menu.departments = Departamentos
 menu.adddpto = Añadir Departamento
+menu.updateDepartment = Actualizar Departamento
 menu.register = Registrarse
 menu.subject = Asignaturas
 menu.about = Sobre nosotros
 menu.login = Entrar
 menu.students = Alumnos
+menu.addAlumn = Añadir Alumno
+menu.updateAlumn = Actualizar Alumno
 menu.profesor = Profesores
 menu.addprof = Añadir Profesor
+menu.updateprof = Actualizar Profesor
 menu.grados = Grados
-menu.addgrados = Añadir Grados
+menu.addgrados = Añadir Grado
+menu.updateGrado = Actualizar Grado
 menu.addprofesor = Añadir Profesor
-menu.addgrado = Añadir Grado
 menu.addSubject = Añadir Asignatura
 menu.subjects = Asignaturas
+menu.updateSubject = Actualizar Asignatura
 menu.editSubject = Actualizar Asignatura
-menu.addAlumn = Añadir ALumno
+menu.asigAlumn = Asiganturas del Alumno
+menu.alumnAsig = Alumnos de la Asignatura
+
 
 name = Nombre
 firstName = Primer Apellido
@@ -35,7 +42,11 @@ type= Tipo
 course = Curso
 quarter = Cuatrimestre
 profesor = Profesor
-matricula = Matricula de 
+matricula = Matricula de
+alumnOf = Alumnos de
+asigOf = Asignaturas de
+profOf = Profesores de
+noDepartment = Departamento no asignado
 
 add = AÑADIR
 update = ACTUALIZAR
