--- a/U6/SPRING_COMPLETO/src/main/resources/locale/messages_en.properties
+++ b/U6/SPRING_COMPLETO/src/main/resources/locale/messages_en.properties
@@ -22,6 +22,8 @@ menu.updateSubject = Update Subject
 menu.updateGrado = Update Grade
 menu.asigAlumn = Subjects of the Student
 menu.alumnAsig = Students of the Alumn
+menu.addSubjectGrad = Add Subject to Grade
+menu.addprofDepart = Add Teacher to Department
 
 name = Name
 firstName = First Name
@@ -44,6 +46,7 @@ alumnOf = Students of
 asigOf = Subjects of
 profOf = Teachers of
 noDepartment = Not Asigned Department
+noGrado = Not Asigned Grado
 
 add = ADD
 update = UPDATE 
