--- a/U6/SPRING_COMPLETO/src/main/resources/locale/messages_es.properties
+++ b/U6/SPRING_COMPLETO/src/main/resources/locale/messages_es.properties
@@ -24,7 +24,8 @@ menu.updateSubject = Actualizar Asignatura
 menu.editSubject = Actualizar Asignatura
 menu.asigAlumn = Asiganturas del Alumno
 menu.alumnAsig = Alumnos de la Asignatura
-
+menu.addSubjectGrad = Añadir Asignatura a Grado
+menu.addprofDepart = Añadir Profesor a Departamento
 
 name = Nombre
 firstName = Primer Apellido
@@ -46,7 +47,8 @@ matricula = Matricula de
 alumnOf = Alumnos de
 asigOf = Asignaturas de
 profOf = Profesores de
-noDepartment = Departamento no asignado
+noDepartment = Departamento no Asignado
+noGrado = Grado no Asignado
 
 add = AÑADIR
 update = ACTUALIZAR
