--- a/U6/SPRING_COMPLETO/src/main/resources/locale/messages_en.properties
+++ b/U6/SPRING_COMPLETO/src/main/resources/locale/messages_en.properties
@@ -24,6 +24,7 @@ menu.asigAlumn = Subjects of the Student
 menu.alumnAsig = Students of the Alumn
 menu.addSubjectGrad = Add Subject to Grade
 menu.addprofDepart = Add Teacher to Department
+menu.addSubjectProf = Add Subject to Teacher
 
 name = Name
 firstName = First Name
