--- a/U6/SPRING_COMPLETO/src/main/resources/locale/messages_es.properties
+++ b/U6/SPRING_COMPLETO/src/main/resources/locale/messages_es.properties
@@ -26,6 +26,7 @@ menu.asigAlumn = Asiganturas del Alumno
 menu.alumnAsig = Alumnos de la Asignatura
 menu.addSubjectGrad = Añadir Asignatura a Grado
 menu.addprofDepart = Añadir Profesor a Departamento
+menu.addSubjectProf = Añadir Asignatura a Profesor
 
 name = Nombre
 firstName = Primer Apellido
