--- a/U6/SPRING_COMPLETO/src/main/resources/locale/messages_en.properties
+++ b/U6/SPRING_COMPLETO/src/main/resources/locale/messages_en.properties
@@ -62,8 +62,23 @@ errorAlumn = Existing Alumn
 errorGrado = Existing Grad
 errorSubject = Existing Subject
 
+noGrado = There's not Grade
 
 
+deleteAsigProf = Subject Correctly Deleted from Teacher
+deleteProfDepart = Teacher Correctly Deleted from Department of
+deleteAsigGrad = Subject Correctly Deleted from 
+deleteAsigAlum = Subject Correctly Deleted from Student 
+deleteAlumAsig = Student Correctly Deleted  from the Subject of
 
+correctAddAsigProf = Subject Correctly Assigned
+correctAddProfDepart = Teacher Correctly Assigned
 
+errorAddAsigProf = Subject Not Assigned 
+errorAddProfDepart = Teacher Not Assigned
 
+addDepartment = Department Correctly Added
+
+updateDepartment = Department Correctly Updated
+
+errorUpdateDepart = Failed to update Department
