--- a/U6/SPRING_COMPLETO/src/main/resources/locale/messages_es.properties
+++ b/U6/SPRING_COMPLETO/src/main/resources/locale/messages_es.properties
@@ -59,15 +59,29 @@ list.alumn = Lista de Alumnos
 
 addProfesor = Añadir Profesor
 
-
+#MENSAJES ERROR & CORRECTO
 errorProfesor = Profesor Existente
 errorDepartment = Departmento Existente
 errorAlumn = Alumno Existente
 errorGrado = Grado Existente
 errorSubject = Asignatura Existente
 
+noGrado = No hay ningun Grado
 
+deleteAsigProf = Asignatura Eliminada Correctamente del Profesor
+deleteProfDepart = Profesor Eliminado Correctamente del Departamento de
+deleteAsigGrad =Asignatura Eliminada Correctamente del
+deleteAsigAlum = Asignatura Eliminada Correctamente del Alumno
+deleteAlumAsig = Alumno Eliminada Correctamente de la Asignatura de 
 
+correctAddAsigProf = Asignatura Correctamente Asignada
+correctAddProfDepart = Profesor Correctamente Asignado
 
+errorAddAsigProf = Asignatura No Asignada
+errorAddProfDepart = Profesor No Asignado
 
+addDepartment = Departamento Correctamente añadido
 
+updateDepartment = Departamento Correctamente Actualizado
+
+errorUpdateDepart = No se ha podido actualizar Departamento
